# lung-cancer-ml-study

./: .gitignore  AGENTS.md  README.md  blankTemplate.ipynb  pyproject.toml  systemDesign.md  titanic_tutorial.ipynb  titanic_tutorial_template.ipynb
artifacts/: gaussian_nb_grid_search_best.csv
docs/: architecture-notes.md  dataset-notes.md  deviations.md
scripts/: cuda_runtime.py  extract_notebook_code.py  grid_search_nb.py  update_notebook_badges.py
tests/: test_extract_notebook_code.py  test_notebook_regression.py  test_update_notebook_badges.py
